--- a/fun-chat/src/ts/classes/pages/main/userMessages/userMessagesView.scss
+++ b/fun-chat/src/ts/classes/pages/main/userMessages/userMessagesView.scss
@@ -8,5 +8,5 @@
     grid-row: 2 /3;
     grid-column: 1 /3;
   }
-  z-index: 2;
+  z-index: 3;
 }
