--- a/fun-chat/src/ts/classes/pages/main/usersList/usersListView.scss
+++ b/fun-chat/src/ts/classes/pages/main/usersList/usersListView.scss
@@ -13,7 +13,7 @@
     grid-row: 2 /3;
     grid-column: 1 /3;
   }
-  z-index: 3;
+  z-index: 4;
 }
 
 .users_hidden {
